# rcore

./: .gitignore  .gitmodules  AI.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
config/: Cargo.toml
config/src/: lib.rs
core/: .nvim.lua  Cargo.toml  build.rs
core/src/: logger.rs  main.rs  system.rs  utils.rs
kernel/: Cargo.toml
kernel/src/: batch.rs  config.rs  console.rs  lang_items.rs  loader.rs  log.rs  logger.rs  main.rs  sbi.rs  stack_trace.rs  syscall.rs  system.rs
kernel/src/asm/: entry.asm  link_app.S
kernel/src/boards/: qemu.rs
kernel/src/sync/: up.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs  time.rs
kernel/src/task/: context.rs  mod.rs  switch.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml
user/src/: config.rs  lib.rs  syscall.rs  system.rs
xtask/: Cargo.toml  linker-user.ld  linker.ld
xtask/src/: main.rs
