[workspace]
resolver = "3"
members  = ["config", "kernel", "user", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["zooeywm"]

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
panic         = "abort"

[profile.product]
inherits = "release"
lto      = "fat"

[workspace.dependencies]
sbi-rt                 = { git = "https://github.com/rustsbi/rustsbi/", package = "sbi-rt", features = ["legacy"] }
config                 = { path = "./config" }
riscv                  = "0.16"
buddy_system_allocator = "0.12"                                                                                     # kernel
enumflags2             = "0.7"
