[package]
name              = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name  = "kernel"
test  = false
bench = false

[dependencies]
sbi-rt.workspace = true
riscv.workspace  = true
config.workspace = true
lazy_static      = { version = "1.5", features = ["spin_no_std"] }
